--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -122,3 +122,35 @@ footer {
     background-color: peachpuff;
     text-align: center;
 }
+
+svg {
+    width: 150px;
+    overflow: hidden;
+}
+
+#illustration{
+	position: absolute;
+	left: 1vw;
+	animation-name: animate;
+	animation-duration: 10s;
+	animation-fill-mode: both;
+	animation-play-state: paused;
+}
+
+
+@keyframes animate {
+	0% {
+		transform: translateX(0vw);
+		opacity: 1;
+	}
+	100% {
+		transform: translateX(100vw);
+		opacity: 1;
+	}
+}
+
+.hero {
+    height: 100vh;
+    background-image: url("../images/miso.jpg");
+    background-position: center;
+}
