--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -24,7 +24,7 @@ html {
 
 body {
     background-color: var(--white);
-    font-family: 'Open Sans', sans-serif;
+    font-family: "Raleway", Verdana, Tahoma;
 }
 
 p {
@@ -67,7 +67,8 @@ header nav ul li a img {
     margin-left: 5vw;
     text-decoration: none;
     text-transform: uppercase;
-    color: var(--darkbrown);
+    color: var(--blue);
+    font-weight: 900;
 }
 
 .navFlex a:hover {
@@ -191,7 +192,7 @@ footer {
 .frontpage .text {
     margin: 0 100px;
     position: fixed;
-    top: 25vh;
+    top: 32vh;
     color: whitesmoke;
 }
 
@@ -202,9 +203,8 @@ footer {
 }
 
 .frontpage p {
-    font-family: "Raleway", Verdana, Tahoma;
     font-size: 20px;
-    width: 300px;
+    width: 450px;
     line-height: 2;
 }
 
@@ -223,4 +223,30 @@ button {
     margin: 30px 0;
     border-radius: 50px;
     border: none;
+    cursor: pointer;
+    transition: 1s;
+}
+
+button:hover {
+    background-color: var(--darkred);
+}
+
+.icons {
+    color: var(--lowOpacityWhite);
+    font-size: 40px;
+    display: flex;
+    flex-direction: row;
+    position: fixed;
+    top: 75vh;
+    left: 78vw;
+    z-index: 3;
+}
+
+.icons i {
+    margin: 0 0 0 20px;
+    transition: 1s;
+}
+
+.icons i:hover {
+    color: var(--white);
 }
