--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -31,6 +31,10 @@ p {
     hyphens: auto;
 }
 
+.bold {
+    font-weight: bold;
+}
+
 header {
     margin: 0;
     padding: 0;
@@ -178,6 +182,27 @@ main section {
 footer {
     background-color: white;
     text-align: center;
+}
+
+footer .flex {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: baseline;
+    background-color: var(--grey);
+    color: var(--blue);
+}
+
+footer .flex section {
+    display: flex;
+    flex-direction: column;
+}
+
+footer .flex section:nth-child(odd) {
+    align-items: baseline;
+}
+
+footer .flex section:nth-child(3) p {
+    margin: 10px 0;
 }
 
 #myVideo {
