--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -23,6 +23,16 @@
     src: url('../Raleway-Bold.ttf') format("truetype");
 }
 
+@font-face {
+    font-family: Roboto Light;
+    src: url('../Roboto-Light.ttf') format("truetype");
+}
+
+@font-face {
+    font-family: Roboto Bold;
+    src: url('../Roboto-Bold.ttf') format("truetype");
+}
+
 html {
     scroll-behavior: smooth;
 }
@@ -40,9 +50,21 @@ p {
     font-family: "Raleway Bold", Verdana, Tahoma;
 }
 
+.robotolight {
+    font-family: "Roboto Light", Verdana, Tahoma;
+}
+
+.robotobold {
+    font-family: "Roboto Bold", Verdana, Tahoma;
+}
+
 header {
     margin: 0;
     padding: 0;
+    height: 60px;
+    width: 100%;
+    display: block;
+    background: var(--lowOpacityWhite);
 }
 
 header nav {
@@ -147,75 +169,6 @@ header nav ul li a img {
 }
 
 /* FRONTPAGE */
-
-
-/* SVG */
-svg {
-    width: 150px;
-    overflow: hidden;
-}
-
-#illustration {
-    position: absolute;
-    left: 1vw;
-    animation-name: animate;
-    animation-duration: 10s;
-    animation-fill-mode: both;
-    animation-play-state: paused;
-}
-
-main section {
-    margin: 100px 0 0 0;
-    height: 100vh;
-	width: 100vw;
-}
-
-
-@keyframes animate {
-    0% {
-        transform: translateX(0vw);
-        opacity: 1;
-    }
-
-    100% {
-        transform: translateX(100vw);
-        opacity: 1;
-    }
-}
-
-/* FOOTER */
-footer {
-    background-color: white;
-    text-align: center;
-}
-
-footer .flex {
-    display: flex;
-    justify-content: space-evenly;
-    align-items: baseline;
-    background-color: var(--grey);
-    color: var(--blue);
-}
-
-footer .flex section {
-    display: flex;
-    flex-direction: column;
-}
-
-footer .flex section:nth-child(odd) {
-    align-items: baseline;
-}
-
-footer .flex section:nth-child(3) p {
-    margin: 10px 0;
-}
-
-footer .icons img {
-    width: 40px;
-    height: 40px;
-    margin: 10px 25px;
-}
-
 #myVideo {
     position: fixed;
     right: 0;
@@ -242,29 +195,6 @@ footer .icons img {
     font-size: 20px;
     width: 450px;
     line-height: 2;
-}
-
-header {
-    height: 60px;
-    width: 100%;
-    display: block;
-    background: var(--lowOpacityWhite);
-
-}
-
-button {
-    background-color: var(--red);
-    color: whitesmoke;
-    padding: 20px 50px;
-    margin: 30px 0;
-    border-radius: 50px;
-    border: none;
-    cursor: pointer;
-    transition: 1s;
-}
-
-button:hover {
-    background-color: var(--darkred);
 }
 
 .frontpage .icons {
@@ -302,4 +232,196 @@ button:hover {
 
 .frontpage .icons img:hover {
     opacity: 1;
+}
+
+.frontpage button {
+    background-color: var(--red);
+    color: whitesmoke;
+    padding: 20px 50px;
+    margin: 30px 0;
+    border-radius: 40px;
+    border: none;
+    cursor: pointer;
+    transition: 1s;
+}
+
+.frontpage button:hover {
+    background-color: var(--darkred);
+}
+
+/* SVG */
+svg {
+    width: 150px;
+    overflow: hidden;
+}
+
+#illustration {
+    position: absolute;
+    left: 1vw;
+    animation-name: animate;
+    animation-duration: 10s;
+    animation-fill-mode: both;
+    animation-play-state: paused;
+}
+
+/* main section {
+    margin: 100px 0 0 0;
+    height: 100vh;
+	width: 100vw;
+} */
+
+
+@keyframes animate {
+    0% {
+        transform: translateX(0vw);
+        opacity: 1;
+    }
+
+    100% {
+        transform: translateX(100vw);
+        opacity: 1;
+    }
+}
+
+/* FOOTER */
+footer {
+    background-color: white;
+    text-align: center;
+}
+
+footer .flex {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: baseline;
+    background-color: var(--grey);
+    color: var(--blue);
+    padding: 10px 0 20px 0;
+}
+
+footer .flex section {
+    display: flex;
+    flex-direction: column;
+}
+
+footer .flex section:nth-child(odd) {
+    align-items: baseline;
+}
+
+footer .flex section:nth-child(even) {
+    align-items: center;
+}
+
+footer .flex section:nth-child(3) p {
+    margin: 5px 0;
+}
+
+footer .icons a {
+    list-style: none;
+    text-decoration: none;
+}
+
+footer .icons img {
+    width: 40px;
+    height: 40px;
+    margin: 10px 25px;
+}
+
+footer button {
+    width: 200px;
+    padding: 15px;
+    background-color: var(--darkred);
+    color: var(--white);
+    border: none;
+    border-radius: 40px;
+}
+
+/* BACKGROUND */
+.contact .background {
+    background-image: url('/assets/images/kort.png');
+}
+.background {
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    height: 40vh;
+}
+
+/* CONTACT */
+.contact main {
+    margin: 50px 100px;
+    display: grid;
+    gap: 25px;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr;
+}
+
+.contact main article h2 {
+    margin: 0;
+}
+
+.contact main article:nth-child(1) {
+    background-color: var(--blue);
+    color: white;
+    padding: 25px;
+    line-height: 2;
+    border-radius: 5px;
+}
+
+.contact main article h1 {
+    margin: 0;
+    color: var(--blue);
+}
+
+.contact main article:nth-child(2) {
+    line-height: 2;
+}
+
+.contactGrid {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
+}
+
+.contactGrid h3 {
+    margin: 0 0 10px 0;
+    color: var(--blue);
+}
+
+.contactGrid a {
+    color: var(--black);
+    text-decoration: none;
+    list-style: none;
+}
+
+.contactGrid p {
+    margin: 0;
+}
+
+.contactGrid section:nth-child(4) img {
+    width: 40px;
+    height: 40px;
+    margin: 20px 20px 0 0;
+}
+
+.owners {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr;
+    gap: 50px;
+}
+
+.owners section img {
+    width: 150px;
+    height: 150px;
+    object-fit: cover;
+    border-radius: 50%;
+}
+
+.owners section h2 {
+    color: var(--white);
+}
+
+.owners section {
+    display: flex;
+    flex-direction: column;
 }
