--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -251,25 +251,14 @@ header nav ul li a img {
 
 /* SVG */
 svg {
-    width: 600px;
+    width: 800px;
     overflow: hidden;
 }
 
 #illustration {
+    padding-top: 50px;
     position: absolute;
-    right: 5vw;
-}
-
-@keyframes animate {
-    0% {
-        transform: translateX(0vw);
-        opacity: 1;
-    }
-
-    100% {
-        transform: translateX(100vw);
-        opacity: 1;
-    }
+    transform: translateX(50vw);
 }
 
 /* FOOTER */
