--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -425,3 +425,80 @@ footer button {
     display: flex;
     flex-direction: column;
 }
+
+/* CARS */
+
+@media (min-width: 900px) {
+    .container {grid-template-columns: repeat(1fr);} }
+  
+    .container {
+      max-width: 1600px;
+      margin: 0 auto;
+      display: grid;
+      grid-gap: 40px;
+      grid-template-columns: repeat(auto-fit, minmax(500px, 1fr));
+      padding: 10% 0 5%;
+    }
+  
+    .boxCars {
+        height: 600px;
+        width: 500px;
+        
+        background-color: var(--white);
+        box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
+        border-radius: 5px;
+
+        background-repeat: no-repeat;
+        background-position: top;
+        background-size: 650px;
+    }
+
+    table {
+        padding: 430px 0 0;
+        width: 500px;
+    }
+
+    th {text-align: justify;}
+
+    td {
+        padding: 1%;
+        font-size: 20px;
+    }
+
+    .right {
+        text-align: right;
+        width: 150px;
+    }
+
+    .headerCars {
+        padding-left: 1%;
+        font-size: 30px;
+        color: var(--blue);
+        font-family: Raleway Bold;
+    }
+
+    .pris {
+        color: var(--white);
+        background-color: var(--blue);
+        padding: 2%;
+        text-align: center;
+        font-size: 20px;
+        font-family: Roboto Bold;
+    }
+
+    .roboto {
+        font-family: Roboto Light;
+    }
+  
+    .item-1 {background-image: url('/assets/images/testbil.jpg');}
+    .item-2 {background-image: url('/assets/images/testbil.jpg');}
+    .item-3 {background-image: url('/assets/images/testbil.jpg');}
+    .item-4 {background-image: url('/assets/images/testbil.jpg');}
+    .item-5 {background-image: url('/assets/images/testbil.jpg');}
+    .item-6 {background-image: url('/assets/images/testbil.jpg');}
+    .item-7 {background-image: url('/assets/images/testbil.jpg');}
+    .item-8 {background-image: url('/assets/images/testbil.jpg');}
+    .item-9 {background-image: url('/assets/images/testbil.jpg');}
+    .item-10 {background-image: url('/assets/images/testbil.jpg');}
+    .item-11 {background-image: url('/assets/images/testbil.jpg');}
+    .item-12 {background-image: url('/assets/images/testbil.jpg');}
