--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -432,19 +432,20 @@ footer button {
     margin: 50px 100px;
     display: grid;
     grid-template-columns: 1fr 1fr;
-    grid-template-rows: 50px 1fr 1fr;
+    grid-template-rows: 1fr;
     gap: 25px;
-    grid-template-areas: 
+    line-height: 2;
+/*     grid-template-areas: 
     "header div2"
     "div1 div2"
-    "div1 div3";
+    "div1 div3"; */
 }
 
-.leasingheader {grid-area: header;}
-.div1 {grid-area: div1;}
-.div2 {grid-area: div2;}
-.div3 {grid-area: div3;}
-
+.leasingGrid img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
 
 .leasingHeader {
     margin: 0;
@@ -459,24 +460,21 @@ footer button {
     line-height: 2;
 }
 
-.div2 {
-    margin: 0;
-    background-image: url(../images/miso.JPG);
-}
-
 .imgLeasing {
     width: 500px;
 }
 
-.div3 {
+.leasingGrid section:nth-child(2) section:nth-child(2) {
     margin: 0;
     padding: 20px;
     background-color: var(--blue);
     color: var(--white);
-    height: 300px;
-    width: 100%;
     line-height: 2;
     border-radius: 5px;
 }
 
+.leasingGrid section:nth-child(2) section:nth-child(2) h2 {
+    padding: 0;
+    margin: 0;
+}
 
