--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -178,7 +178,6 @@ header nav ul li a img {
 }
 
 .frontpage .text {
-    margin: 0 100px;
     position: fixed;
     top: 32vh;
     color: whitesmoke;
@@ -424,7 +423,7 @@ footer button:hover {
 
 /* LEASING */
 .leasingflex {
-    margin-bottom: -50px;
+    margin-bottom: -100px;
     display: flex;
     flex-direction: column;
     transform: translateY(-100px);
@@ -528,81 +527,99 @@ footer button:hover {
 } */
 
 /* CARS */
+.cars main {
+    transform: translateY(-100px);
+    margin-bottom: -80px;
+}
 
-@media (min-width: 900px) {
-    .container {grid-template-columns: repeat(1fr);} }
-  
-    .container {
-      max-width: 1600px;
-      margin: 0 auto;
-      display: grid;
-      grid-gap: 40px;
-      grid-template-columns: repeat(auto-fit, minmax(500px, 1fr));
-      padding: 10% 0 5%;
-    }
-  
-    .boxCars {
-        height: 600px;
-        width: 500px;
-        
-        background-color: var(--white);
-        box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
-        border-radius: 5px;
+.cars .options {
+    display: flex;
+    flex-direction: row;
+    border-radius: 10px;
+    text-align: center;
+    background-color: var(--darkred);
+}
 
-        background-repeat: no-repeat;
-        background-position: top;
-        background-size: 650px;
-    }
+.cars .options select {
+    margin: 20px;
+    font-size: 16px;
+    padding: 10px 30px;
+    background-color: var(--white);
+    color: var(--blue);
+    border-radius: 10px;
+    transition: 1s;
+}
 
-    table {
-        padding: 430px 0 0;
-        width: 500px;
-    }
+.cars main .carGrid {
+    margin: 25px 0;
+    max-width: 1600px;
+    display: grid;
+    grid-gap: 40px;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: auto;
+}
 
-    th {text-align: justify;}
+.cars main .carGrid .carBox {
+    display: flex;
+    flex-direction: column;
+    background-color: var(--white);
+    box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
+    border-radius: 5px;
+}
 
-    td {
-        padding: 1%;
-        font-size: 20px;
-    }
+.cars main .carGrid .details section {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
 
-    .right {
-        text-align: right;
-        width: 150px;
-    }
+.cars .details section p:nth-child(2) {
+    text-align: right;
+}
 
-    .headerCars {
-        padding-left: 1%;
-        font-size: 30px;
-        color: var(--blue);
-        font-family: Raleway Bold;
-    }
+.cars main .carGrid .carBox img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
 
-    .pris {
-        color: var(--white);
-        background-color: var(--blue);
-        padding: 2%;
-        text-align: center;
-        font-size: 20px;
-        font-family: Roboto Bold;
-    }
+.cars main .carGrid .carBox .details section:nth-child(n+2) {
+    padding: 5px;
+}
 
-    .roboto {
-        font-family: Roboto Light;
-    }
-  
-    .item-1 {background-image: url('/assets/images/testbil.jpg');}
-    .item-2 {background-image: url('/assets/images/testbil.jpg');}
-    .item-3 {background-image: url('/assets/images/testbil.jpg');}
-    .item-4 {background-image: url('/assets/images/testbil.jpg');}
-    .item-5 {background-image: url('/assets/images/testbil.jpg');}
-    .item-6 {background-image: url('/assets/images/testbil.jpg');}
-    .item-7 {background-image: url('/assets/images/testbil.jpg');}
-    .item-8 {background-image: url('/assets/images/testbil.jpg');}
-    .item-9 {background-image: url('/assets/images/testbil.jpg');}
-    .item-10 {background-image: url('/assets/images/testbil.jpg');}
-    .item-11 {background-image: url('/assets/images/testbil.jpg');}
-    .item-12 {background-image: url('/assets/images/testbil.jpg');}
+.cars main .carGrid .carBox .details section .icondetail {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.cars main .carGrid .carBox .details section .icondetail img {
+    width: 20px;
+    height: 20px;
+    padding-right: 10px;
+}
+
+.cars main .carGrid .carBox .details section p {
+    margin: 0;
+    align-items: baseline;
+}
+
+.cars .details h2 {
+    margin: 0;
+    padding: 2%;
+    font-size: 30px;
+    color: var(--blue);
+    font-family: 'Raleway', sans-serif;
+    font-weight: bold;
+}
+
+.pris {
+    color: var(--white);
+    background-color: var(--blue);
+    padding: 2%;
+    font-weight: bold;
+}
 
 /* CAR */
 .car main {
