--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -339,7 +339,6 @@ footer button:hover {
     background-image: url('/assets/images/miso.JPG');
 }
 
-
 /* CONTACT */
 .contact main {
     margin: 50px 100px;
@@ -519,6 +518,12 @@ footer button:hover {
 
 #splitleasing {
     display: none;
+}
+
+.leasing main img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
 
 /* #illustration2 {
