SVG files fixed

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -250,7 +250,7 @@ header nav ul li a img {
 }
 
 /* SVG */
-#illustration {
+#illustration4 {
     width: 800px;
     padding-top: 50px;
     position: absolute;
