--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -250,8 +250,14 @@ header nav ul li a img {
 }
 
 /* SVG */
+#illustration1, #illustration2, #illustration3 {
+    width: 60vw;
+    position: relative;
+    transform: translateX(0vw);
+}
+
 #illustration4 {
-    width: 800px;
+    width: 55vw;
     padding-top: 50px;
     position: absolute;
     transform: translateX(50vw);
@@ -434,9 +440,9 @@ footer button:hover {
 
 .leasingGrid { /* IDA */
     display: grid;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 47% 47%;
     grid-template-rows: 1fr;
-    gap: 100px;
+    gap: 6%;
     line-height: 2;
 }
 
@@ -527,12 +533,6 @@ footer button:hover {
     height: 100%;
     object-fit: cover;
 }
-
-/* #illustration2 {
-    padding-top: 50px;
-    position: absolute;
-    transform: translateX(50vw);
-} */
 
 /* CARS */
 .cars main {
