--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -163,6 +163,10 @@ header nav ul li a img {
         margin: 30px;
     }
 
+    header.height {
+        height: 100vh;
+    }
+
     header nav ul {
         padding: 0 20px 0 5px;
         display: flex;
@@ -445,13 +449,20 @@ footer button:hover {
     background-image: url('/assets/images/leasing.png');
 }
 
-.background.bignav {
+.background.backgroundheight {
     height: 100vh;
+    background-size: cover;
+    background-position: center;
+    background-image: url('/assets/images/138883469_2881500738835396_5193849887842095846_n.png');
 }
 
 @media screen and (max-width: 812px) {
     .background {
         height: 25vh;
+    }
+
+    .contact .background {
+        background-size: 250%;
     }
 }
 
@@ -741,7 +752,7 @@ footer button:hover {
     margin-bottom: -80px;
 }
 
-.cars a {
+.carBox {
     text-decoration: none;
     color: var(--black);
 }
@@ -872,7 +883,7 @@ footer button:hover {
     text-align: center;
 }
 
-.car a {
+.linkToCars {
     text-decoration: none;
     color: var(--black);
     padding: 25px 0;
@@ -995,9 +1006,12 @@ footer button:hover {
     z-index: 100;
 }
 
-/* CARS MEDIA QUERIES */
-
+/* CAR MEDIA QUERIES */
 @media screen and (max-width: 812px) {
+    .car main {
+        transform: translateY(-65px);
+    }
+
     .car .title {
         padding: 10px;
         font-size: 10px;
@@ -1011,6 +1025,22 @@ footer button:hover {
         width: 100%;
         height: 40vh;
         object-fit: cover;
+    }
+
+    .car .details .icondetail {
+        flex-direction: column;
+        align-items: baseline;
+        gap: 15px;
+    }
+
+    .car .details section {
+        display: grid;
+        grid-template-columns: 70% 30%;
+        grid-template-rows: auto;
+    }
+
+    .car .details section p {
+        line-height: 1.5;
     }
 }
 
