--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -37,7 +37,8 @@ p {
 }
 
 main {
-    margin: 50px 100px;
+    margin: 50px auto;
+    max-width: 1300px;
 }
 
 .bold {
@@ -371,7 +372,7 @@ header nav ul li a img {
 }
 
 #illustration4 {
-    width: 55vw;
+    width: 700px;
     padding-top: 50px;
     position: absolute;
     transform: translateX(50vw);
@@ -511,7 +512,8 @@ footer button:hover {
 
 /* CONTACT */
 .contact main {
-    margin: 50px 100px;
+    max-width: 1300px;
+    margin: 50px auto;
     display: grid;
     gap: 25px;
     grid-template-columns: 1fr 1fr;
@@ -1034,7 +1036,7 @@ footer button:hover {
 .mySlides { /* Kilde: https://www.w3schools.com/w3css/tryit.asp?filename=tryw3css_slideshow_self */
     display: none;
     width: 100%;
-    height: 76vh;
+    height: 550px;
     object-fit: cover;
 }
 
