--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -37,8 +37,8 @@ p {
 }
 
 main {
-    margin: 50px 100px;
-    max-width: 1300px;
+    margin: 50px auto;
+    max-width: 1200px;
 }
 
 .bold {
@@ -1115,5 +1115,12 @@ footer button:hover {
         width: 100%;
         height: 60vh;
         object-fit: cover;
+    }
+}
+
+@media screen and (min-width: 1600px) {
+    main {
+        margin: 30px auto;
+        max-width: 1300px;
     }
 }
