--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -63,7 +63,7 @@ header {
     left: 0;
     top: 0;
     z-index: 2;
-    width: 100%;
+    width: 100vw;
 }
 
 header nav ul {
@@ -519,7 +519,7 @@ footer button:hover {
 /* CONTACT */
 .contact main {
     max-width: 1300px;
-    margin: 50px auto;
+    margin: 50px 100px;
     display: grid;
     gap: 25px;
     grid-template-columns: 1fr 1fr;
@@ -1120,6 +1120,11 @@ footer button:hover {
 
 @media screen and (min-width: 1600px) {
     main {
+        margin: 30px auto;
+        max-width: 1300px;
+    }
+
+    .contact main {
         margin: 30px auto;
         max-width: 1300px;
     }
