--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -98,6 +98,7 @@ header nav ul li a img {
 
 .navFlex a:hover {
     text-decoration: underline;
+    text-underline-position: under;
 }
 
 #navIkon {
