--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1121,7 +1121,19 @@ footer a {
     margin: auto;
     font-size: 30px;
     z-index: 100;
+    cursor: pointer;
 }
+
+.knap1, .knap2 {
+    animation: none;
+}
+
+@keyframes slideshowbutton {    
+    0% {transform: scale(1);}
+    50% {transform: scale(0.75);}
+    100% {transform: scale(1);}
+}
+
 
 /* CAR MEDIA QUERIES */
 @media screen and (max-width: 812px) {
